--- a/ShowMyRecipes.html
+++ b/ShowMyRecipes.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -148,7 +147,7 @@
   </style>
 </head>
 <body>
-<<<<<<< HEAD
+
 <header>
   <div class="nav-container">
     <h1>🍽️ Meal Explorer</h1>
@@ -164,53 +163,6 @@
         <li><a href="favorites.html">❤️ Favorites</a></li>
       </ul>
     </nav>
-=======
-  <header>
-    <div class="nav-container">
-      <h1>🍽️ Meal Explorer</h1>
-      <nav>
-        <ul>
-          <li><a href="meals.html">🏠 Home</a></li>
-          <li><a href="search-by-letter.html">🔤 Search by First Letter</a></li>
-          <li><a href="random-meal.html">🎲 Random Meal</a></li>
-          <li><a href="all-categories.html">📂 All Categories</a></li>
-          <li><a href="meals-by-category.html">🍛 By Category</a></li>
-          <li><a href="meals-by-area.html">🌍 By Area</a></li>
-          <li><a href="meals-by-ingredient.html">🥕 By Ingredient</a></li>
-          <li><a href="favorites.html">❤️ Favorites</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <div class="main-title">Show My Recipes 🍽️</div>
-
-  <div class="container">
-    <div class="section-title">➕ Add / Edit Recipe</div>
-    <form id="recipeForm" onsubmit="handleFormSubmit(event)">
-      <input type="hidden" id="recipeId">
-      <input type="text" id="name" placeholder="Recipe Name" required />
-      <input type="text" id="category" placeholder="Category" required />
-      <input type="text" id="area" placeholder="Area" required />
-      <textarea id="instructions" placeholder="Instructions" rows="4" required></textarea>
-      <button class="btn-add" type="submit">Save Recipe</button>
-      <button type="button" class="btn-import" onclick="importFromAPI()">Import from TheMealDB</button>
-    </form>
-
-    <div class="section-title">📋 My Recipes </div>
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Category</th>
-          <th>Area</th>
-          <th>Instructions</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody id="recipeTableBody"></tbody>
-    </table>
->>>>>>> origin/main
   </div>
 </header>
 
@@ -282,7 +234,6 @@
     document.getElementById('recipeId').value = '';
   }
 
-<<<<<<< HEAD
   function displayRecipes() {
     const tbody = document.getElementById('recipeTableBody');
     tbody.innerHTML = '';
@@ -299,62 +250,18 @@
     recipes.forEach(recipe => {
       const row = document.createElement('tr');
       row.innerHTML = `
-=======
-      if (!name || !category || !area || !instructions) return;
-
-      if (id) {
-        const index = recipes.findIndex(r => r.id === id);
-        if (index !== -1) {
-          recipes[index] = { id, name, category, area, instructions };
-        }
-      } else {
-        const newRecipe = {
-          id: Date.now().toString(),
-          name,
-          category,
-          area,
-          instructions
-        };
-        recipes.push(newRecipe);
-      }
-
-      updateStorage();
-      displayRecipes();
-      document.getElementById('recipeForm').reset();
-      document.getElementById('recipeId').value = '';
-    }
-
-    function displayRecipes() {
-      const tbody = document.getElementById('recipeTableBody');
-      tbody.innerHTML = '';
-      if (recipes.length === 0) {
-        tbody.innerHTML = <tr><td colspan="5">No recipes yet.</td></tr>;
-        return;
-      }
-
-      recipes.forEach(recipe => {
-        const row = document.createElement('tr');
-        row.innerHTML = 
->>>>>>> origin/main
-          <td>${recipe.name}</td>
-          <td>${recipe.category}</td>
-          <td>${recipe.area}</td>
-          <td>${recipe.instructions}</td>
-          <td>
-            <button class="btn-edit" onclick="editRecipe('${recipe.id}')">Edit</button>
-            <button class="btn-delete" onclick="deleteRecipe('${recipe.id}')">Delete</button>
-          </td>
-<<<<<<< HEAD
-        `;
+        <td>${recipe.name}</td>
+        <td>${recipe.category}</td>
+        <td>${recipe.area}</td>
+        <td>${recipe.instructions}</td>
+        <td>
+          <button class="btn-edit" onclick="editRecipe('${recipe.id}')">Edit</button>
+          <button class="btn-delete" onclick="deleteRecipe('${recipe.id}')">Delete</button>
+        </td>
+      `;
       tbody.appendChild(row);
     });
   }
-=======
-        ;
-        tbody.appendChild(row);
-      });
-    }
->>>>>>> origin/main
 
   function editRecipe(id) {
     const recipe = recipes.find(r => r.id === id);
@@ -366,37 +273,10 @@
     document.getElementById('instructions').value = recipe.instructions;
   }
 
-<<<<<<< HEAD
   function deleteRecipe(id) {
     if (!confirm("Are you sure you want to delete this recipe?")) return;
     recipes = recipes.filter(r => r.id !== id);
     updateStorage();
-=======
-    function deleteRecipe(id) {
-      if (!confirm("Are you sure you want to delete this recipe?")) return;
-      recipes = recipes.filter(r => r.id !== id);
-      updateStorage();
-      displayRecipes();
-    }
-
-    function importFromAPI() {
-      const mealName = prompt("Enter a meal name to import:");
-      if (!mealName) return;
-
-      fetch(https://www.themealdb.com/api/json/v1/1/search.php?s=${mealName})
-        .then(res => res.json())
-        .then(data => {
-          if (!data.meals) return alert("Meal not found!");
-          const meal = data.meals[0];
-          document.getElementById('name').value = meal.strMeal;
-          document.getElementById('category').value = meal.strCategory;
-          document.getElementById('area').value = meal.strArea;
-          document.getElementById('instructions').value = meal.strInstructions;
-        });
-    }
-
-    // Initial load
->>>>>>> origin/main
     displayRecipes();
   }
 
@@ -407,7 +287,11 @@
     fetch(`https://www.themealdb.com/api/json/v1/1/search.php?s=${mealName}`)
             .then(res => res.json())
             .then(data => {
-              if (!data.meals) return alert("Meal not found!");
+              if (!data.meals) {
+                alert('Meal not found!');
+                return;
+              }
+
               const meal = data.meals[0];
               document.getElementById('name').value = meal.strMeal;
               document.getElementById('category').value = meal.strCategory;
@@ -416,12 +300,8 @@
             });
   }
 
-  // Initial load
   displayRecipes();
 </script>
+
 </body>
 </html>
-<<<<<<< HEAD
-=======
-
->>>>>>> origin/main
